apps/authentik/authentik/app/referencegrant.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ext-auth-outpost
  namespace: authentik
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: default
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: home
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: paperless
  to:
    - group: ""
      kind: Service
      name: ak-outpost-authentik-embedded-outpost
